cabal-version: 2.2

name: alicia-banana
version: 0

executable alicia-banana
  build-depends:
    base,
    containers,
    reactive-banana ^>= 1.3,
    sdl2,
    sdl2-mixer,
    termbox-banana ^>= 2.0.0,
  default-language: GHC2021
  ghc-options:
    -O
    -rtsopts
    -threaded
    -Wall
  main-is:
    Main.hs
